workloads/base/ingress.yaml
  
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: time-checker-service
spec:
  rules:
  - host: "school.com"
    http:
      paths:
      - path: /current-time
        pathType: Prefix
        backend:
          service:
            name: time-checker-service
            port:
              number: 80
